# py_taskflow

./: .gitignore  README.md  coordinator.Dockerfile  docker-compose.yml  frontend.Dockerfile  preview_demo  pyproject.toml  requirements.txt  scheduler.Dockerfile  worker.Dockerfile
coordinator/: main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Metrics.jsx  ScheduleForm.jsx  TaskTable.jsx  Workers.jsx
proto/: task.proto  task_pb2.py  task_pb2_grpc.py
scheduler/: main.py  models.py
scheduler/api/: routes.py  schemas.py
scheduler/core/: limiter.py
scheduler/services/: db.py
utils/: logger.py
worker/: main.py
