[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytaskflow"
version = "0.1.0"
description = "Python Distributed Task Scheduler"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Shrinedhi", email = "you@example.com" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scheduler*", "coordinator*", "worker*", "proto*", "utils*"]
